--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 asgiref==3.3.1
+attrs==21.2.0
 certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.6
 django-rest-passwordreset==1.1.0
 djangorestframework==3.12.2
+drf-spectacular==0.17.0
 idna==2.10
+importlib-metadata==4.5.0
+inflection==0.5.1
+jsonschema==3.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pyrsistent==0.17.3
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.25.1
+six==1.16.0
 sqlparse==0.4.1
-urllib3==1.26.3
+typing-extensions==3.10.0.0
 ujson==4.0.2
+uritemplate==3.0.1
+urllib3==1.26.3
+zipp==3.4.1
